@@ -278,6 +278,6 @@ do_test (void)
    return (sin_failures == 0 && cos_failures == 0) ? 0 : 1;
 }
 
-#define TIMEOUT 10
+#define TIMEOUT 600
 #define TEST_FUNCTION do_test ()
 #include "../test-skeleton.c"
